--- a/src/main/resources/templates/manterSala.html
+++ b/src/main/resources/templates/manterSala.html
@@ -69,7 +69,7 @@
                 <input type="text" aria-label="sala" class="form-control" th:field="*{local_sala}" />
             </div>
             <div class="d-grid gap-2 col-3 mx-auto p-3">
-                <button class="btn btn-primary btn-sm" type="button">
+                <button class="btn btn-primary btn-sm" type="submit">
                     Alterar
                 </button>
             </div>
